use getDeclaredConstructor().newInstance() to instance task bean